--- a/requirements.txt
+++ b/requirements.txt
@@ -26,13 +26,6 @@ pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pydeck==0.8.0
 pyee==9.0.4
-Pygments==2.13.0
-PyGObject==3.36.0
-PyHamcrest==1.9.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-Pympler==1.0.1
-PyNaCl==1.3.0
 pyOpenSSL==19.0.0
 pyrsistent==0.18.1
 python-apt==2.0.0+ubuntu0.20.4.7
@@ -43,12 +36,7 @@ pytz==2022.6
 pytz-deprecation-shim==0.1.0.post0
 PyYAML==5.3.1
 requests==2.22.0
-requests-unixsocket==0.2.0
-revChatGPT==0.0.43.4
-rfc3986==1.5.0
-rich==12.6.0
-SecretStorage==2.3.1
-selenium==4.7.2
+requests-unixsocket==0.2.
 semver==2.13.0
 service-identity==18.1.0
 simplejson==3.16.0
@@ -82,5 +70,4 @@ wadllib==1.3.3
 watchdog==2.2.0
 websockets==10.4
 Werkzeug==2.2.2
-zipp==3.7.0
 zope.interface==4.7.1
